Bug 38686 - systemd-tmpfiles doesn't check /lib/tmpfiles.d
Summary: systemd-tmpfiles doesn't check /lib/tmpfiles.d
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Lennart Poettering
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-25 22:33 UTC by Dan Callaghan
Modified: 2012-07-20 14:51 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch (1.30 KB, patch)
2011-06-25 22:33 UTC, Dan Callaghan
Details | Splinter Review
Patch which uses configured prefix (2.36 KB, patch)
2011-07-03 00:12 UTC, Dan Callaghan
Details | Splinter Review

Description Dan Callaghan 2011-06-25 22:33:46 UTC
Created attachment 48424 [details] [review]
Patch

If systemd is configured with --prefix=/ it won't find its own tmpfiles configuration files, because they will be installed in /lib/tmpfiles.d but systemd-tmpfiles does not look there.

I noticed a similar problem with systemd-binfmt also (although I don't use it). The attached patch fixes both.
Comment 1 Dan Callaghan 2011-07-03 00:12:39 UTC
Created attachment 48703 [details] [review]
Patch which uses configured prefix

It was suggested to me that a better solution would be to obey the prefix from autoconf. Here's a new patch to do that.
Comment 2 Lennart Poettering 2012-07-20 14:51:50 UTC
Honestly, I think installing systemd with the prefix of / is a really bad idea.

But anyway, fixed this now to be symmetric to the other tools.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.